# maiden_sim

./: Cargo.toml  index.html  maiden-8379432887b48af7.js  maiden-8c4e6be2c9c29dd7.js  maiden-b7f80f4d732e303.js  maiden-d773f6da0f110671.js  maiden-d793d258b8099ad9.js
.github/workflows/: release.yaml
assets/models/: maiden.glb  matomenos.glb  player.glb
src/: camera.rs  config.rs  lib.rs  loading.rs  maiden.rs  main.rs  map.rs  matomenos.rs  menu.rs  player.rs  spawn_point.rs  spell.rs
src/actions/: game_control.rs  mod.rs
