[package]
name = "maiden"
version = "0.1.0"
publish = false
authors = ["InfernoStats <77599829+InfernoStats@users.noreply.github.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
rand = { version = "0.8.5" }
bevy = { version = "0.8.1", default-features = false, features = ["bevy_asset", "bevy_scene", "bevy_winit", "render", "png", "x11"] }
bevy_asset_loader = { version = "0.12" }
bevy_egui = { version = "0.16.1" }
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", branch = "refactor" }
smooth-bevy-cameras = { version = "0.5.0" }
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"